--- a/Assignment1/1B/style.css
+++ b/Assignment1/1B/style.css
@@ -28,7 +28,7 @@
         color: #FDE02F;
     }
 
-      footer {
+      /* footer {
         background-color: blueviolet;
         color: #fff;
         text-align: center;
@@ -36,7 +36,14 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: 100%; */
+      
+      /* } */
+      footer {
+        background-color: blueviolet;
+        color: #fff;
+        text-align: center;
+        padding: 1em;
       
       }
       @media (max-width: 600px) {
@@ -240,7 +247,26 @@
         max-height: 200px;
         object-fit: cover;
     }
-    button[type=submit] {
+    .contact-form {
+      background-color: transparent;
+      display: flex;
+      flex-wrap: wrap;
+      }
+      
+      .contact-form input,
+      .contact-form textarea {
+      flex: 1;
+      margin: 10px;
+      }
+      
+      @media (max-width: 600px) {
+      .contact-form {
+      width: 90%;
+      margin: 0 auto;
+      }
+      }
+    
+      button[type=submit] {
         background-color: blueviolet;
         color: white;
         padding: 12px 20px;
@@ -250,5 +276,9 @@
       }
   
       button[type=submit]:hover {
-        background-color: rgb(242, 110, 154);
+        background-color: pink;
       }
+  
+      
+
+      
