--- a/Assignment 6/Assignment 6/PartA/cal.css
+++ b/Assignment 6/Assignment 6/PartA/cal.css
@@ -4,14 +4,8 @@
     box-sizing: border-box;
 }
 
-:root{
-    --primary:#167BFF;
-    --dark:#1F2973;
-    --light:white;
-}
-
 body {
-    background-color: #98bde0;
+    background-color: grey;
     font-family: 'Poppins', 'sans-serif';
     display: flex;
     align-items: center;
@@ -45,8 +39,8 @@ h2{
     cursor: pointer;
 
     font-size: 1rem;
-    color:var(--light);
-    background-color: var(--primary);
+    color:black;
+    background-color: blueviolet;
     margin: 0px 0px 0 -2px;
     padding: 11px;
     border-radius: 0.5rem;
@@ -61,8 +55,8 @@ h2{
     cursor: pointer;
 
     font-size: 1rem;
-    color:var(--light);
-    background-color: var(--primary);
+    color:black;
+    background-color: blueviolet;
     margin: 0 0px 0px 11px;
     padding: 11px;
     border-radius: 0.5rem;
@@ -77,8 +71,8 @@ h2{
     cursor: pointer;
 
     font-size: 1rem;
-    color:var(--light);
-    background-color: var(--primary);
+    color:black;
+    background-color:blueviolet;
     margin: 0 0.5rem;
     padding: 11px;
     border-radius: 0.5rem;
@@ -93,8 +87,8 @@ h2{
     cursor: pointer;
 
     font-size: 1rem;
-    color:var(--light);
-    background-color: var(--primary);
+    color:black;
+    background-color:blueviolet;
     margin: 0px 0px 0px 2px;
     padding: 11px;
     border-radius: 0.5rem;
@@ -110,8 +104,8 @@ h2{
     cursor: pointer;
     padding: 6px;
     margin: 26px 0 0 264px;
-    color:var(--light);
-    background-color: var(--primary);
+    color:black;
+    background-color: blueviolet;
     border-radius: 0.5rem;
     transition: 0.4s;
     
@@ -140,7 +134,7 @@ div button{
 }
 
 button:active{
-    background-color: var(--light);
+    background-color: black;
 }
 
 #welcome{
