--- a/Assignment 9/page_web/src/Pages/JobPage/JobPage.css
+++ b/Assignment 9/page_web/src/Pages/JobPage/JobPage.css
@@ -1,19 +1,25 @@
+.job-card-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
 .job-card {
-    margin-bottom: 1rem;
-  }
-  
-  .job-card .card-title {
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-  }
-  
-  .job-card .card-text {
-    font-size: 1rem;
-    margin-bottom: 1rem;
-  }
-  
-  .job-card .btn {
-    font-size: 1rem;
-  }
-  
+  flex-basis: calc(50% - 0.5rem);
+  margin-bottom: 1rem;
+}
+
+.job-card .card-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.job-card .card-text {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.job-card .btn {
+  font-size: 1rem;
+}
